Fixed browse reference arrow alignment

--- a/src/WebComponents/Attributes/PersistentObjectAttributeReference/persistent-object-attribute-reference.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeReference/persistent-object-attribute-reference.scss
@@ -51,6 +51,7 @@
             vi-icon {
                 margin: 0 var(--theme-h5);
                 min-width: var(--theme-h4);
+                height: 1em;
                 fill: var(--theme-color);
                 transform: translateY(2px);
             }
